--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ header {
 .section-container-expired-tasks {
     column-gap: 10px;
     row-gap: 10px;
-    justify-content: space-between;
+    justify-content:start;
     flex-wrap: wrap;
 
 
